--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/stub4ever/grunt-start-kit#readme",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.2.0",
@@ -36,13 +37,17 @@
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^2.3.1",
+    "grunt-filesizegzip": "^0.3.0",
     "grunt-modernizr": "^1.0.2",
+    "grunt-newer": "^1.2.0",
+    "grunt-notify": "^0.4.5",
+    "grunt-postcss": "^0.8.0",
+    "grunt-processhtml": "^0.4.0",
     "grunt-sass": "^1.1.0",
     "grunt-svgmin": "^3.1.0",
-    "grunt-usemin": "^3.0.0",
+    "grunt-uncss": "^0.6.0",
     "grunt-wiredep": "^2.0.0",
-    "jit-grunt": "^0.9.1",
+    "jit-grunt": "^0.10.0",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^3.5.0",
     "node-bourbon": "^4.2.3",
