--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filesizegzip": "^0.3.0",
@@ -48,6 +49,7 @@
     "grunt-uncss": "^0.6.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.10.0",
+    "jshint-stylish": "^2.2.0",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^3.5.0",
     "node-bourbon": "^4.2.3",
