--- a/package.json
+++ b/package.json
@@ -65,5 +65,11 @@
       2
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "grunt-assemble": "^0.4.0",
+    "grunt-combine-media-queries": "^1.0.20",
+    "grunt-jscs": "^3.0.1",
+    "grunt-spritesmith": "^6.3.1",
+    "npm": "^3.10.5"
+  }
 }
