--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-csslint": "^1.0.0",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-imagemin": "^1.0.0",
@@ -39,6 +40,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filesizegzip": "^0.3.0",
+    "grunt-jscs": "^3.0.1",
     "grunt-modernizr": "^1.0.2",
     "grunt-newer": "^1.2.0",
     "grunt-notify": "^0.4.5",
@@ -68,8 +70,6 @@
   "dependencies": {
     "grunt-assemble": "^0.4.0",
     "grunt-combine-media-queries": "^1.0.20",
-    "grunt-jscs": "^3.0.1",
-    "grunt-spritesmith": "^6.3.1",
     "npm": "^3.10.5"
   }
 }
