--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "grunt-sass": "^1.1.0",
     "grunt-svgmin": "^3.1.0",
     "grunt-uncss": "^0.6.0",
+    "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.10.0",
     "jshint-stylish": "^2.2.0",
