--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filesizegzip": "^0.3.0",
+    "grunt-grunticon": "^2.2.3",
     "grunt-jscs": "^3.0.1",
     "grunt-modernizr": "^1.0.2",
     "grunt-newer": "^1.2.0",
