--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-filesizegzip": "^0.3.0",
+    "grunt-filerev": "^2.3.1",
     "grunt-grunticon": "^2.2.3",
     "grunt-jscs": "^3.0.1",
     "grunt-modernizr": "^1.0.2",
@@ -55,7 +55,6 @@
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.10.0",
-    "jshint-stylish": "^2.2.0",
     "load-grunt-configs": "^1.0.0",
     "load-grunt-tasks": "^3.5.0",
     "node-bourbon": "^4.2.3",
